--- a/breast_cancer_final_1 (1).ipynb
+++ b/breast_cancer_final_1 (1).ipynb
@@ -102,8 +102,9 @@
         "print(\"\\n1. Veri Oracle'dan Çekiliyor... \")\n",
         "\n",
         "# 1. AYARLAR\n",
-        "username = 'system'\n",
-        "password = '123Dd'\n",
+        "# 1. AYARLAR\n",
+        "username = '******'      # Gizlendi\n",
+        "password = '******'      # Gizlendi\n",
         "dsn = 'localhost:1521/orcl.home' # Adres\n",
         "table_name = 'BREAST_CANCER_DATASET'\n",
         "\n",
@@ -147,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -224,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -273,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -316,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -359,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -402,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -459,7 +460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -592,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "gfps6-qLiRFP",
         "outputId": "2ca0b25d-f5c7-48fa-8b3c-7aa50d1ede8f"
@@ -615,14 +616,12 @@
             "HASTA BİLGİLERİNİ GİRİNİZ\n",
             "\n",
             "--- Seçmeli Kodlar (Yukarıdaki tabloya bakınız) ---\n",
-            "    HATA: Lütfen 0 ile 2 arasında bir sayı seçiniz!\n",
-            "    HATA: Lütfen 0 ile 1 arasında bir sayı seçiniz!\n",
             "\n",
             "****************************************\n",
-            "📋  SONUÇ RAPORU\n",
+            " SONUÇ RAPORU\n",
             "****************************************\n",
-            "Evre Tahmini:   IIB\n",
-            "Tümör Tipi:     Well differentiated\n",
+            "Evre Tahmini:   IIA\n",
+            "Tümör Tipi:     Moderately differentiated\n",
             "----------------------------------------\n",
             "Yorum: BİLGİ: Orta seviye. Standart tedavi uygulanır.\n",
             "****************************************\n",
